[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "lightspeed-rag-content",
]

[tool.uv.sources]
lightspeed-rag-content = { git = "https://github.com/lightspeed-core/rag-content.git", branch = "main" }
